as2/antlr/xppll1Parser.java
// Generated from xppll1.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xppll1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, IDENT=35, INTCONSTANT=36, STRINGCONSTANT=37, 
		WHITESPACE=38;
	public static final int
		RULE_xppll1 = 0, RULE_program = 1, RULE_classlist = 2, RULE_classlistb = 3, 
		RULE_classdecl = 4, RULE_classbody = 5, RULE_classbodyb = 6, RULE_vardecls = 7, 
		RULE_constructdecls = 8, RULE_methoddecls = 9, RULE_type = 10, RULE_vardecl = 11, 
		RULE_brackets = 12, RULE_multivardecl = 13, RULE_vardeclcomma = 14, RULE_constructdecl = 15, 
		RULE_methoddecl = 16, RULE_methodbody = 17, RULE_paramlist = 18, RULE_multiparam = 19, 
		RULE_statment = 20, RULE_varoratrib = 21, RULE_atribstat = 22, RULE_atribstatb = 23, 
		RULE_printstat = 24, RULE_readstat = 25, RULE_returnstat = 26, RULE_returnstatb = 27, 
		RULE_superstat = 28, RULE_ifstat = 29, RULE_forstat = 30, RULE_insidefor = 31, 
		RULE_insideforb = 32, RULE_insideforc = 33, RULE_statlist = 34, RULE_statlistb = 35, 
		RULE_lvalue = 36, RULE_lvalueb = 37, RULE_alocexpression = 38, RULE_alocexpressionb = 39, 
		RULE_alocexpressionc = 40, RULE_expressions = 41, RULE_expressionsb = 42, 
		RULE_expression = 43, RULE_expressionb = 44, RULE_expressionc = 45, RULE_numexpression = 46, 
		RULE_terms = 47, RULE_term = 48, RULE_unaryexprs = 49, RULE_unaryexpr = 50, 
		RULE_factor = 51, RULE_arglist = 52, RULE_arglists = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"xppll1", "program", "classlist", "classlistb", "classdecl", "classbody", 
			"classbodyb", "vardecls", "constructdecls", "methoddecls", "type", "vardecl", 
			"brackets", "multivardecl", "vardeclcomma", "constructdecl", "methoddecl", 
			"methodbody", "paramlist", "multiparam", "statment", "varoratrib", "atribstat", 
			"atribstatb", "printstat", "readstat", "returnstat", "returnstatb", "superstat", 
			"ifstat", "forstat", "insidefor", "insideforb", "insideforc", "statlist", 
			"statlistb", "lvalue", "lvalueb", "alocexpression", "alocexpressionb", 
			"alocexpressionc", "expressions", "expressionsb", "expression", "expressionb", 
			"expressionc", "numexpression", "terms", "term", "unaryexprs", "unaryexpr", 
			"factor", "arglist", "arglists"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'{'", "'}'", "';'", "'int'", "'string'", 
			"'['", "']'", "','", "'constructor'", "'('", "')'", "'break'", "'='", 
			"'print'", "'read'", "'return'", "'super'", "'if'", "'else'", "'for'", 
			"'.'", "'new'", "'<'", "'>'", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "IDENT", 
			"INTCONSTANT", "STRINGCONSTANT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xppll1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xppll1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Xppll1Context extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Xppll1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xppll1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterXppll1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitXppll1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitXppll1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Xppll1Context xppll1() throws RecognitionException {
		Xppll1Context _localctx = new Xppll1Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_xppll1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				classlist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasslistContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(xppll1Parser.IDENT, 0); }
		public ClassdeclContext classdecl() {
			return getRuleContext(ClassdeclContext.class,0);
		}
		public ClasslistbContext classlistb() {
			return getRuleContext(ClasslistbContext.class,0);
		}
		public ClasslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterClasslist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitClasslist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitClasslist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClasslistContext classlist() throws RecognitionException {
		ClasslistContext _localctx = new ClasslistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__0);
			setState(115);
			match(IDENT);
			setState(116);
			classdecl();
			setState(117);
			classlistb();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasslistbContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ClasslistbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlistb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterClasslistb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitClasslistb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitClasslistb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClasslistbContext classlistb() throws RecognitionException {
		ClasslistbContext _localctx = new ClasslistbContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classlistb);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				classlist();
				}
				break;
			case EOF:
			case T__3:
			case T__5:
			case T__6:
			case T__10:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(xppll1Parser.IDENT, 0); }
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterClassdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitClassdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitClassdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classdecl);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(T__1);
				setState(124);
				match(IDENT);
				setState(125);
				classbody();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				classbody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodyContext extends ParserRuleContext {
		public ClassbodybContext classbodyb() {
			return getRuleContext(ClassbodybContext.class,0);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterClassbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitClassbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitClassbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classbody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__2);
			setState(130);
			classbodyb();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodybContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public VardeclsContext vardecls() {
			return getRuleContext(VardeclsContext.class,0);
		}
		public ConstructdeclsContext constructdecls() {
			return getRuleContext(ConstructdeclsContext.class,0);
		}
		public MethoddeclsContext methoddecls() {
			return getRuleContext(MethoddeclsContext.class,0);
		}
		public ClassbodybContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbodyb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterClassbodyb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitClassbodyb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitClassbodyb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassbodybContext classbodyb() throws RecognitionException {
		ClassbodybContext _localctx = new ClassbodybContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classbodyb);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				classlist();
				setState(133);
				vardecls();
				setState(134);
				constructdecls();
				setState(135);
				methoddecls();
				setState(136);
				match(T__3);
				}
				break;
			case T__3:
			case T__5:
			case T__6:
			case T__10:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				vardecls();
				setState(139);
				constructdecls();
				setState(140);
				methoddecls();
				setState(141);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclsContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public VardeclsContext vardecls() {
			return getRuleContext(VardeclsContext.class,0);
		}
		public VardeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterVardecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitVardecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitVardecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclsContext vardecls() throws RecognitionException {
		VardeclsContext _localctx = new VardeclsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vardecls);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				vardecl();
				setState(146);
				match(T__4);
				setState(147);
				vardecls();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructdeclsContext extends ParserRuleContext {
		public ConstructdeclContext constructdecl() {
			return getRuleContext(ConstructdeclContext.class,0);
		}
		public ConstructdeclsContext constructdecls() {
			return getRuleContext(ConstructdeclsContext.class,0);
		}
		public ConstructdeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructdecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterConstructdecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitConstructdecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitConstructdecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructdeclsContext constructdecls() throws RecognitionException {
		ConstructdeclsContext _localctx = new ConstructdeclsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constructdecls);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				constructdecl();
				setState(153);
				constructdecls();
				}
				break;
			case T__3:
			case T__5:
			case T__6:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethoddeclsContext extends ParserRuleContext {
		public MethoddeclContext methoddecl() {
			return getRuleContext(MethoddeclContext.class,0);
		}
		public MethoddeclsContext methoddecls() {
			return getRuleContext(MethoddeclsContext.class,0);
		}
		public MethoddeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methoddecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterMethoddecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitMethoddecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitMethoddecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethoddeclsContext methoddecls() throws RecognitionException {
		MethoddeclsContext _localctx = new MethoddeclsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_methoddecls);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				methoddecl();
				setState(159);
				methoddecls();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(xppll1Parser.IDENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << IDENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(xppll1Parser.IDENT, 0); }
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public MultivardeclContext multivardecl() {
			return getRuleContext(MultivardeclContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitVardecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitVardecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			type();
			setState(167);
			match(IDENT);
			setState(168);
			brackets();
			setState(169);
			multivardecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketsContext extends ParserRuleContext {
		public BracketsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brackets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterBrackets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitBrackets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitBrackets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BracketsContext brackets() throws RecognitionException {
		BracketsContext _localctx = new BracketsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_brackets);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(171);
				match(T__7);
				setState(172);
				match(T__8);
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultivardeclContext extends ParserRuleContext {
		public VardeclcommaContext vardeclcomma() {
			return getRuleContext(VardeclcommaContext.class,0);
		}
		public MultivardeclContext multivardecl() {
			return getRuleContext(MultivardeclContext.class,0);
		}
		public MultivardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multivardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).enterMultivardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xppll1Listener ) ((xppll1Listener)listener).exitMultivardecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xppll1Visitor ) return ((xppll1Visitor<? extends T>)visitor).visitMultivardecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultivardeclContext multivardecl() throws RecognitionException {
		MultivardeclContext _localctx = new MultivardeclContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_multivardecl);
		try {
			setState(182);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				vardeclcomma();
				setState(179);
				multivardecl();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
